--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -7,12 +7,16 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    margin-bottom:-1px;
     h3 {
         color:white;
         font-family:@primary-font-bold;
     }
     & > section {
-        position: absolute;
+        position: relative;
+        top:0;
+        left:0;
+        float:left;
         width: 25%;
         height: (100% / 3);
         -webkit-transition: all 0.5s ease-in-out;
@@ -33,29 +37,29 @@
         }
     }
     & > section:first-child {
-        top: 0;
-        left: 0;
+        //top: 0;
+        //left: 0;
         background:url('../images/ely-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(2) {
-        top: 0;
-        left: 25%;
+        //top: 0;
+        //left: 25%;
         background:url('../images/diageo-thumb.jpg');
         background-position:50% 0%;
         background-size:cover;
     }
     & > section:nth-child(3) {
-        top: 0;
-        left: 50%;
+        //top: 0;
+        //left: 50%;
         background:url('../images/h2-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(4) {
-        top: 0;
-        left: 75%;
+        //top: 0;
+        //left: 75%;
         background:url('../images/dhda-thumb.jpg');
         background-position:center;
         background-size:cover;
@@ -64,69 +68,69 @@
         }
     }
     & > section:nth-child(5) {
-        top: 33.3%;
-        left: 0;
+        //top: 33.3%;
+        //left: 0;
         background:url('../images/goc-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(6) {
-        top: 33.3%;
-        left: 25%;
+        //top: 33.3%;
+        //left: 25%;
         background:url('../images/lincoln-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
-            //margin-top:-2rem;
+            //margin-//top:-2rem;
         }
     }
     & > section:nth-child(7) {
-        top: 33.3%;
-        left: 50%;
+        //top: 33.3%;
+        //left: 50%;
         background:url('../images/relo-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
-            //margin-top:-1.5rem;
+            //margin-//top:-1.5rem;
         }
     }
     & > section:nth-child(8) {
-        top: 33.3%;
-        left: 75%;
+        //top: 33.3%;
+        //left: 75%;
         background:url('../images/mutz-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
-            //margin-top:-1.5rem;
+            //margin-//top:-1.5rem;
         }
     }
     & > section:nth-child(9) {
-        top: 66.6%;
-        left: 0;
+        //top: 66.6%;
+        //left: 0;
         background:url('../images/flowers-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
-            //margin-top:-2rem;
+            //margin-//top:-2rem;
         }
     }
     & > section:nth-child(10) {
-        top: 66.6%;
-        left: 25%;
+        //top: 66.6%;
+        //left: 25%;
         background:url('../images/energy-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(11) {
-        top: 66.6%;
-        left: 50%;
+        //top: 66.6%;
+        //left: 50%;
         background:url('../images/mactivate-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(12) {
-        top: 66.6%;
-        left: 75%;
+        //top: 66.6%;
+        //left: 75%;
         background:url('../images/irishtimes-thumb.jpg');
         background-position:center;
         background-size:cover;
@@ -137,7 +141,7 @@
     & > section.wk-expand {
         width: 100%;
         height: 100%;
-        top: 0;
+        top: 10px;
         left: 0;
         position:fixed;
     }
@@ -158,7 +162,7 @@
     }
 }
 .wk-box {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -168,6 +172,7 @@
     transition: opacity 0.2s linear 0.5s;
     text-align:center;
     padding:1rem;
+    font-size:1em;
     h3, p {
         text-align: center;
         margin: 0;
