started new footer content

--- a/app/less/partials/footer.less
+++ b/app/less/partials/footer.less
@@ -5,7 +5,7 @@ footer {
 	color:white;
 	font-family:@secondary-font;
 	width:100%;
-	display:none;
+	//display:none;
 	.column.full {
 		height:100%;
 		background:rgba(0, 0, 0, 0.7);
