--- a/app/less/pages/about/about-team.less
+++ b/app/less/pages/about/about-team.less
@@ -122,6 +122,13 @@ section.team {
 		color:@text-grey;
 		border:1px solid lightgrey;
 		display:none;
+		width:100%;
+		height:100vh;
+		top:0;
+		left:0;
+		margin:0;
+		z-index:10000;
+		overflow-y:scroll;
 		-webkit-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
 		-moz-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
 		-ms-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
