--- a/app/less/partials/footer.less
+++ b/app/less/partials/footer.less
@@ -3,16 +3,150 @@ footer {
 	background-size:cover;
 	background-position:center;
 	color:white;
-	font-family:@secondary-font;
+	font-family:@primary-font-reg;
+	font-size:0.8em;
 	width:100%;
 	//display:none;
-	.column.full {
+	hr {
+		width:100%;
+		border:0;
+		border-top:1px solid @text-grey - 20;
+		margin:1rem 0;
+	}
+	.column.full.footer-main {
 		height:100%;
-		background:rgba(0, 0, 0, 0.7);
-		padding-top:5rem;
-		padding-bottom:5rem;
+		background:rgba(0, 0, 0, 0.8);
+		padding:2rem 1rem;
+		p {
+			line-height:20px;
+			text-transform:uppercase;
+		}
+		a {
+			text-decoration:underline;
+			color:@primary-color;
+		}
+		.footer-social {
+			p {
+				margin:0;
+			}
+			a {
+				text-decoration:none;
+				font-size:2.5em;
+				transition:all 0.3s ease;
+				.no-touch & {
+					&:hover {
+						color:#fff;
+					}
+				}
+			}
+		}
 	}
 	.flow-opposite {
-		text-align:right;
+		//text-align:right;
+	}
+	.copyright {
+		text-align:center;
+		padding:0.5rem;
+		background:lightgrey;
+		color:@text-grey;
+		font-family:@secondary-font;
+		a {
+			text-decoration:underline;
+			color:@text-grey - 30;
+		}
+	}
+	.email-signup {
+		margin-top:1rem;
+		.mc-field-group {
+			//position: relative;
+			input[type="email"] {
+				background-color:#fff;
+				color:@text-grey;
+				font-size: 12px;
+				height:2.5rem;
+				padding:0.5rem;
+				text-transform: uppercase;
+				width:170px;
+				border: none;
+				display: inline-block;
+			}
+			input[type="submit"] {
+				background:@primary-color;
+				height:2.5rem;
+				padding:0.5rem;
+				border: none;
+				transition:all 0.3s ease;
+				.no-touch & {
+					&:hover {
+						background:#fff;
+						color:@primary-color;
+					}
+				}
+			}
+		}
+	}
+}
+.privacy-lightbox {
+	border:1px solid white;
+	position:fixed;
+	background:#fff;
+	padding:2rem;
+	border-radius:4px;
+	color:@text-grey;
+	border:1px solid lightgrey;
+	display:none;
+	width:100%;
+	height:100vh;
+	top:0;
+	left:0;
+	margin:0;
+	z-index:10000;
+	overflow-y:scroll;
+	-webkit-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+	-moz-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+	-ms-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+	-o-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+	box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+	h1 {
+		font-family:@primary-font-reg;
+		text-transform:uppercase;
+		color:black;
+		font-weight:normal;
+		font-size:2em;
+	}
+	p {
+		font-family:@secondary-font;
+		text-align:left;
+	}
+	.icon-exit {
+		position:absolute;
+		font-size:2.5em;
+		top:1rem;
+		right:1rem;
+		color:@primary-color;
+		&:hover {
+			color:@primary-color - 30;
+		}
+	}
+}
+
+@media screen and (min-width:640px) {
+	footer {
+		.flow-opposite {
+			text-align:right;
+		}
+		hr {
+			display:none;
+		}
+	}
+}
+@media screen and (min-width:768px) {
+	.privacy-lightbox {
+		width:80%;
+		z-index:999;
+		top:50%;
+		left:50%;
+		transform:translate(-50%, -50%);
+		height:auto;
 	}
 }
