--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1933,17 +1933,136 @@ nav a#nav-toggle {
   background-size: cover;
   background-position: center;
   color: white;
-  font-family: 'cabrito_norm_regularnormRg';
+  font-family: 'baufraregular';
+  font-size: 0.8em;
   width: 100%;
 }
-footer .column.full {
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+footer hr {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #505050;
+  margin: 1rem 0;
 }
-footer .flow-opposite {
-  text-align: right;
+footer .column.full.footer-main {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 2rem 1rem;
+}
+footer .column.full.footer-main p {
+  line-height: 20px;
+  text-transform: uppercase;
+}
+footer .column.full.footer-main a {
+  text-decoration: underline;
+  color: #e74c3c;
+}
+footer .column.full.footer-main .footer-social p {
+  margin: 0;
+}
+footer .column.full.footer-main .footer-social a {
+  text-decoration: none;
+  font-size: 2.5em;
+  transition: all 0.3s ease;
+}
+.no-touch footer .column.full.footer-main .footer-social a:hover {
+  color: #fff;
+}
+footer .copyright {
+  text-align: center;
+  padding: 0.5rem;
+  background: lightgrey;
+  color: #646464;
+  font-family: 'cabrito_norm_regularnormRg';
+}
+footer .copyright a {
+  text-decoration: underline;
+  color: #464646;
+}
+footer .email-signup {
+  margin-top: 1rem;
+}
+footer .email-signup .mc-field-group input[type="email"] {
+  background-color: #fff;
+  color: #646464;
+  font-size: 12px;
+  height: 2.5rem;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  width: 170px;
+  border: none;
+  display: inline-block;
+}
+footer .email-signup .mc-field-group input[type="submit"] {
+  background: #e74c3c;
+  height: 2.5rem;
+  padding: 0.5rem;
+  border: none;
+  transition: all 0.3s ease;
+}
+.no-touch footer .email-signup .mc-field-group input[type="submit"]:hover {
+  background: #fff;
+  color: #e74c3c;
+}
+.privacy-lightbox {
+  border: 1px solid white;
+  position: fixed;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 4px;
+  color: #646464;
+  border: 1px solid lightgrey;
+  display: none;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  z-index: 10000;
+  overflow-y: scroll;
+  -webkit-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.privacy-lightbox h1 {
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+  color: black;
+  font-weight: normal;
+  font-size: 2em;
+}
+.privacy-lightbox p {
+  font-family: 'cabrito_norm_regularnormRg';
+  text-align: left;
+}
+.privacy-lightbox .icon-exit {
+  position: absolute;
+  font-size: 2.5em;
+  top: 1rem;
+  right: 1rem;
+  color: #e74c3c;
+}
+.privacy-lightbox .icon-exit:hover {
+  color: #c92e1e;
+}
+@media screen and (min-width: 640px) {
+  footer .flow-opposite {
+    text-align: right;
+  }
+  footer hr {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .privacy-lightbox {
+    width: 80%;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+  }
 }
 @media screen and (min-width: 769px) {
   nav {
@@ -3093,6 +3212,13 @@ section.team .lightbox {
   color: #646464;
   border: 1px solid lightgrey;
   display: none;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  z-index: 10000;
+  overflow-y: scroll;
   -webkit-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
   -ms-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
@@ -3211,17 +3337,6 @@ section.team .lightbox .icon-exit:hover {
 @media screen and (max-width: 768px) {
   .no-cssvhunit section.team .lightbox {
     height: 595px;
-  }
-}
-@media screen and (min-width: 20rem) {
-  section.team .lightbox {
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    margin: 0;
-    z-index: 10000;
-    overflow-y: scroll;
   }
 }
 @media screen and (min-width: 40rem) {
