new footer on every page

--- a/app/less/partials/footer.less
+++ b/app/less/partials/footer.less
@@ -6,7 +6,7 @@ footer {
 	font-family:@primary-font-reg;
 	font-size:0.8em;
 	width:100%;
-	//display:none;
+	display:none;
 	hr {
 		width:100%;
 		border:0;
