--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -9,10 +9,10 @@
 		padding-top:1rem;
 	}
 	.wk-main {
-		height:60rem;
+		//height:60rem;
 		& > section {
 			width:50%;
-			height:10rem;
+			//height:10rem;
 			.wk-icon-close {
 				//top:6rem;
 				right:1rem;
@@ -77,10 +77,10 @@
 
 @media screen and (max-width: 30rem) {
 	.wk-main {
-		height:120rem;
+		//height:120rem;
 		& > section {
 			width:100%;
-			height:10rem;
+			//height:10rem;
 			
 		}
 		& > section.wk-expand {
@@ -89,12 +89,8 @@
 		}
 	}
 }
-@media screen and (min-width: 961px) {
+@media screen and (max-width: 961px) {
 	.wk-main {
-		max-height:595px;
-		min-height:550px;
-		.no-cssvhunit & {
-	        height:595px;
-	    }
+		height:auto;
 	}
 }
