--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -5,7 +5,7 @@
 .wk-main {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 595px;
     overflow: hidden;
     margin-bottom:-1px;
     h3 {
@@ -18,7 +18,8 @@
         left:0;
         float:left;
         width: 25%;
-        height: (100% / 3);
+        height:198.33333333333333333px;
+        //height:(100% / 3);
         -webkit-transition: all 0.5s ease-in-out;
         -moz-transition: all 0.5s ease-in-out;
         transition: all 0.5s ease-in-out;
@@ -185,6 +186,10 @@
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
+        -webkit-transform: translateY(15px);
+        -moz-transform: translateY(15px);
+        -ms-transform: translateY(15px);
+        transform: translateY(15px);
     }
     img.icon-plugmedia {
         max-width:3em;
@@ -194,6 +199,10 @@
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
         //margin-top:2rem;
+        -webkit-transform: translateY(15px);
+        -moz-transform: translateY(15px);
+        -ms-transform: translateY(15px);
+        transform: translateY(15px);
     }
     h3 {
         font-size:1.2em;
@@ -432,10 +441,10 @@ section.wk-expand {
             transition: background 0.2s linear;
             &:hover {
                 h3, p, img.icon-plugmedia {
-                    -webkit-transform: translateY(-15px);
-                    -moz-transform: translateY(-15px);
-                    -ms-transform: translateY(-15px);
-                    transform: translateY(-15px);
+                    -webkit-transform: translateY(0);
+                    -moz-transform: translateY(0);
+                    -ms-transform: translateY(0);
+                    transform: translateY(0);
                     opacity:1;
                 }
                 background: @primary-color + 5;
