changed rems to px in all media queries

--- a/app/less/pages/about/media-queries-about-team.less
+++ b/app/less/pages/about/media-queries-about-team.less
@@ -9,7 +9,7 @@
 }
 
 
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	section.team {
 		.lightbox {
 			.column.two-thirds, .column.third {
@@ -22,7 +22,7 @@
 		}
 	}
 }
-@media screen and (min-width: 55rem) {
+@media screen and (min-width: 880px) {
 	section.team {
 		.lightbox {
 			width:80%;
