--- a/app/less/pages/about/media-queries-about-why-and-vision.less
+++ b/app/less/pages/about/media-queries-about-why-and-vision.less
@@ -1,4 +1,4 @@
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	section.why-we-do-it {
 		.content {
 			.column.full.text-center {
@@ -18,7 +18,7 @@
 		}
 	}
 }
-@media screen and (min-width: 58rem) {
+@media screen and (min-width: 928px) {
 	section.why-we-do-it {
 		.content {
 			padding-left:7rem;
