--- a/app/less/pages/connect/media-queries-connect.less
+++ b/app/less/pages/connect/media-queries-connect.less
@@ -1,10 +1,10 @@
-@media screen and (min-width: 31rem) {
+@media screen and (min-width: 496px) {
 	section.contact {
 		padding-left:2rem;
 		padding-right:2rem;
 	}
 }
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	section.social-media {
 		font-size:2em;
 		i {
@@ -20,14 +20,14 @@
 		}
 	}
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
 	section.map {
 		.google-map {
 			padding-bottom:30%;
 		}
 	}
 }
-@media screen and (min-width: 68rem) {
+@media screen and (min-width: 1088px) {
 	section.contact {
 		padding-left:4rem;
 		padding-right:4rem;
