--- a/app/less/pages/home/media-queries-home-header.less
+++ b/app/less/pages/home/media-queries-home-header.less
@@ -1,9 +1,9 @@
-@media screen and (min-width: 30rem) {
+@media screen and (min-width: 480px) {
 	.plug-and-socket {
 		top:8.2rem;
 	}
 }
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	.header-text-and-logo {
 		.home-header-text {
 			h1 {
