--- a/app/less/pages/home/media-queries-home-process.less
+++ b/app/less/pages/home/media-queries-home-process.less
@@ -1,17 +1,17 @@
-@media screen and (min-width: 74rem) {
+@media screen and (min-width: 1184px) {
 	.office-img {
 		p {
 			margin-top:0;
 		}
 	}
 }
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 768px) {
 	.process {
 		padding-left:1rem;
 		padding-right:1rem;
 	}
 }
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 640px) {
 	.plug-scroll {
 		display:none;
 	}
