--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -1,9 +1,9 @@
-@media screen and (max-width: 69rem) {
+@media screen and (max-width: 1104px) {
 	.wk-box {
 		font-size:0.8em;
 	}
 }
-@media screen and (max-width: 60rem) {
+@media screen and (max-width: 960px) {
 	div.wk-panel-items > div > div {
 		width:90%;
 		padding-top:1rem;
@@ -29,7 +29,7 @@
 	}
 }
 
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 768px) {
 	div.wk-panel-items#wk-panel-work-items {
 	    p {
 	        font-size:1em;
@@ -41,7 +41,7 @@
 	}
 }
 
-@media screen and (max-width: 30rem) {
+@media screen and (max-width: 480px) {
 	.wk-main {
 		& > section {
 			.wk-icon-close {
@@ -75,7 +75,7 @@
 	}
 }
 
-@media screen and (max-width: 30rem) {
+@media screen and (max-width:  480px) {
 	.wk-main {
 		//height:120rem;
 		& > section {
