--- a/app/less/media-queries-headers.less
+++ b/app/less/media-queries-headers.less
@@ -1,9 +1,9 @@
-@media screen and (min-width: 30rem) {
+@media screen and (min-width: 480px) {
 	.connect-header-text {
 		font-size:0.8em;
 	}
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
 	.connect-header-text, 
 	.about-header-text,
 	.services-header-text,
