--- a/app/less/pages/about/media-queries-about-blocks.less
+++ b/app/less/pages/about/media-queries-about-blocks.less
@@ -1,4 +1,4 @@
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	.block-why-we-do-it {
 		h2 {
 			font-size:3em;
@@ -15,7 +15,7 @@
 		}
 	}
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
 	.block-why-we-do-it {
 		h2 {
 			font-size:4em;
