--- a/app/less/pages/about/media-queries-about-intro.less
+++ b/app/less/pages/about/media-queries-about-intro.less
@@ -1,4 +1,4 @@
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	section.about-intro {
 		padding-top:5rem;
 		padding-bottom:5rem;
@@ -17,7 +17,7 @@
 		}
 	}
 }
-@media screen and (min-width: 58rem) {
+@media screen and (min-width: 928px) {
 	section.about-intro {
 		i {
 			font-size:3em;
