--- a/app/less/pages/services/media-queries-services-blocks.less
+++ b/app/less/pages/services/media-queries-services-blocks.less
@@ -1,4 +1,4 @@
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	section.services-blocks {
 		font-size:1em;
 		.column.third {
@@ -6,7 +6,7 @@
 		}
 	}
 }
-@media screen and (min-width: 68rem) {
+@media screen and (min-width: 1088px) {
 	section.services-blocks {
 		font-size:1em;
 		.block-design, .block-marketing, .block-training, .block-analysis, .block-consulting {
