--- a/app/less/pages/showcase/media-queries-showcase-case-studies.less
+++ b/app/less/pages/showcase/media-queries-showcase-case-studies.less
@@ -1,4 +1,4 @@
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 768px) {
 	.cs-main {
 		& > section {
 			.cs-icon-close {
@@ -7,7 +7,7 @@
 		}
 	}
 }
-@media screen and (max-width: 30rem) {
+@media screen and (max-width: 480px) {
 	.cs-main {
 		height:40rem;
 		& > section {
