--- a/app/less/pages/showcase/media-queries-showcase-intro.less
+++ b/app/less/pages/showcase/media-queries-showcase-intro.less
@@ -1,4 +1,4 @@
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	.showcase-intro {
 		padding-top:5rem;
 		padding-bottom:5rem;
@@ -10,7 +10,7 @@
 		}
 	}
 }
-@media screen and (min-width:48rem) {
+@media screen and (min-width: 768px) {
 	.block-work, .block-case-studies {
 		.column {
 			h2 {
