--- a/app/less/partials/media-queries-navbar.less
+++ b/app/less/partials/media-queries-navbar.less
@@ -33,7 +33,7 @@
 		}
 	}
 }
-@media screen and (min-width: 56rem) {
+@media screen and (min-width: 896px) {
 	nav {
 		ul {
 			li {
@@ -45,7 +45,7 @@
 		}
 	}
 }
-@media screen and (min-width: 40rem) {
+@media screen and (min-width: 640px) {
 	nav {
 		ul {
 			li {
@@ -83,7 +83,7 @@
 		}
 	}
 }*/
-@media only screen and (max-width : 48rem) {
+@media only screen and (max-width : 768px) {
 	nav {
 		border-bottom: 0;
 		//background:@mobile-nav-bg-color;
@@ -129,7 +129,7 @@
 		}
 	}
 }
-@media only screen and (max-width : 20rem) {
+@media only screen and (max-width : 320px) {
 	nav {
 		li {
 			display: block;
