turned off footer-reveal

--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -124,7 +124,7 @@ header.home-header {
 	cursor:pointer;
 	cursor:hand;
 	.no-cssvhunit & {
-		display:none;
+		display:none !important;
 	}
 	&:hover {
 		height:1.5rem;
