--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -25,6 +25,7 @@ header.home-header {
 	background:url('../images/bridge.jpg');
 	background-size:cover;
 	background-position:center;
+	background-attachment:fixed;
 	width:100%;
 	height:100vh;
 	z-index:-100;
@@ -53,8 +54,9 @@ header.home-header {
 }
 .header-text-and-logo {
 	width:100%;
+	position:absolute;
 	top:25vh;
-	z-index:-2;
+	z-index:0;
 	.no-cssvhunit & {
 		top:150px;
 	}
@@ -124,7 +126,7 @@ header.home-header {
 	cursor:pointer;
 	cursor:hand;
 	.no-cssvhunit & {
-		display:none !important;
+		display:none;
 	}
 	&:hover {
 		height:1.5rem;
