--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2204,6 +2204,7 @@ header.home-header {
   background: url('../images/bridge.jpg');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   width: 100%;
   height: 100vh;
   z-index: -100;
@@ -2232,8 +2233,9 @@ header.home-header .header-img {
 }
 .header-text-and-logo {
   width: 100%;
+  position: absolute;
   top: 25vh;
-  z-index: -2;
+  z-index: 0;
 }
 .no-cssvhunit .header-text-and-logo {
   top: 150px;
@@ -2317,7 +2319,7 @@ header.home-header .header-img {
   cursor: hand;
 }
 .no-cssvhunit .scroll-down {
-  display: none !important;
+  display: none;
 }
 .scroll-down:hover {
   height: 1.5rem;
