--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -22,44 +22,28 @@ h2 {
 ////////////
 
 header.home-header {
+	position:relative;
 	background:url('../images/bridge.jpg');
 	background-size:cover;
+	background-repeat:no-repeat;
 	background-position:center;
+	background-attachment:scroll;
 	background-attachment:fixed;
 	width:100%;
-	height:100vh;
+	height:595px;
 	z-index:-100;
-	.no-cssvhunit & {
-		height:595px;
-	}
 	.home-header-bg {
 		background-color:@home-header-bg-color;
 		width:100vw;
-		height:100vh;
-		.no-cssvhunit & {
-			height:595px;
-		}
-	}
-	.header-img {
-		width:100vw;
-		height:100vh;
-		z-index:-1;
-		position:fixed;
-		top:0;
-		left:0;
-		.no-cssvhunit & {
-			height:595px;
-		}
+		height:595px;
 	}
 }
 .header-text-and-logo {
 	width:100%;
-	position:absolute;
-	top:25vh;
+	position:relative;
+	top:50%;
+	transform:translateY(-50%);
 	z-index:0;
-	.no-cssvhunit & {
-		top:150px;
-	}
 	.svg-icon {
 		display: inline-block;
 		position: relative;
@@ -93,7 +77,7 @@ header.home-header {
 	}
 }
 .plug-and-socket {
-	position:fixed;
+	position:absolute;
 	left:0;
 	top:3rem;
 	left:-1.5rem;
@@ -112,12 +96,12 @@ header.home-header {
 }
 .scroll-down {
 	width:100%;
-	position:absolute;
-	bottom:0;
+	position:relative;
+	bottom:1.2rem;
+	margin-bottom:-1.2rem;
 	left:0;
 	background-color:rgba(255, 255, 255, 0.2);
 	height:1.2rem;
-	margin-bottom:0 !important;
 	-webkit-transition: height 0.3s;
 	-moz-transition: height 0.3s;
 	-o-transition: height 0.3s;
@@ -125,22 +109,24 @@ header.home-header {
 	transition: height 0.3s;
 	cursor:pointer;
 	cursor:hand;
-	.no-cssvhunit & {
-		display:none;
+	display:none;
+	.cssvhunit & {
+		display:block;
 	}
 	&:hover {
-		height:1.5rem;
 		.semi-circle {
 			height:2.3rem;
 			width:4.5rem;
-			margin-top:-2.3rem;
+			margin-top:-0.3rem;
 		}
 	}
 	.semi-circle {
 		height:2rem;
 		width:4rem;
-		margin:0 auto;
-		margin-top:-2rem;
+		position:absolute;
+		top:-2rem;
+		left:50%;
+		transform:translateX(-50%);
 		border-radius: 90px 90px 0 0;
 		background-color:rgba(255, 255, 255, 0.2);
 		-webkit-transition: height 0.3s, width 0.3s, margin-top 0.3s;
@@ -157,6 +143,9 @@ header.home-header {
 	.chevron {
 		height:1.6rem;
 		width:1.6rem;
+		position:absolute;
+		left:50%;
+		transform:translateX(-50%);
 		border-radius:50%;
 		background-color:white;
 		color:black;
