--- a/app/less/pages/home/media-queries-home-header.less
+++ b/app/less/pages/home/media-queries-home-header.less
@@ -38,7 +38,7 @@
 			max-width:10rem;
 		}
 		.home-header-text {
-			margin-top:-1.5rem;
+			//margin-top:-1.5rem;
 			h1 {
 				font-size:7em;
 			}
