--- a/app/less/pages/services/services-header.less
+++ b/app/less/pages/services/services-header.less
@@ -1,34 +1,28 @@
 header.services-header {
-	z-index:-1;
+	position:relative;
 	background:url('../images/meter.jpg');
 	background-size:cover;
+	background-repeat:no-repeat;
 	background-position:center;
+	background-attachment:scroll;
+	background-attachment:fixed;
 	width:100%;
-	height:100vh;
-	.no-cssvhunit & {
-		height:595px;
-	}
+	height:595px;
+	z-index:-100;
 	.services-header-bg {
-		position:absolute;
-		top:0;
-		height:100vh;
-		width:100%;
-		background:black;
-		opacity:0.4;
-		.no-cssvhunit & {
-			height:595px;
-		}
+		background:rgba(0,0,0,0.4);
+		width:100vw;
+		height:595px;
 	}
 }
 .services-header-text {
 	width:100%;
-	top:40vh;
+	position:relative;
+	top:50%;
+	transform:translateY(-50%);
+	z-index:0;
 	color:white;
-	z-index:-1;
 	font-size:0.5em;
-	.no-cssvhunit & {
-		top:250px;
-	}
 	h1 {
 		font-size:7em;
 		margin:0;
