--- a/app/less/partials/footer.less
+++ b/app/less/partials/footer.less
@@ -101,7 +101,7 @@ footer {
 	left:0;
 	margin:0;
 	z-index:10000;
-	overflow-y:scroll;
+	overflow-y:auto;
 	-webkit-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
 	-moz-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
 	-ms-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
