--- a/app/less/pages/about/about-header.less
+++ b/app/less/pages/about/about-header.less
@@ -2,17 +2,13 @@ header.about-header {
 	position:relative;
 	background:url('../images/digitaldepot.jpg');
 	background-size:cover;
-	background-repeat:no-repeat;
 	background-position:center;
-	background-attachment:scroll;
-	background-attachment:fixed;
 	width:100%;
 	height:595px;
-	z-index:-100;
 	.about-header-bg {
 		background:rgba(0,0,0,0.4);
-		width:100vw;
-		height:595px;
+		width:100%;
+		height:100%;
 	}
 }
 .about-header-text {
