--- a/app/less/pages/showcase/showcase-header.less
+++ b/app/less/pages/showcase/showcase-header.less
@@ -2,17 +2,13 @@ header.showcase-header {
 	position:relative;
 	background:url('../images/pencils.jpg');
 	background-size:cover;
-	background-repeat:no-repeat;
 	background-position:center;
-	background-attachment:scroll;
-	background-attachment:fixed;
 	width:100%;
 	height:595px;
-	z-index:-100;
 	.showcase-header-bg {
 		background:rgba(0,0,0,0.4);
-		width:100vw;
-		height:595px;
+		width:100%;
+		height:100%;
 	}
 }
 .showcase-header-text {
