--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2204,18 +2204,14 @@ header.home-header {
   position: relative;
   background: url('../images/bridge.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-  background-attachment: fixed;
   width: 100%;
   height: 595px;
-  z-index: -100;
 }
 header.home-header .home-header-bg {
   background-color: rgba(231, 76, 60, 0.93);
-  width: 100vw;
-  height: 595px;
+  width: 100%;
+  height: 100%;
 }
 .header-text-and-logo {
   width: 100%;
@@ -2301,10 +2297,6 @@ header.home-header .home-header-bg {
   transition: height 0.3s;
   cursor: pointer;
   cursor: hand;
-  display: none;
-}
-.cssvhunit .scroll-down {
-  display: block;
 }
 .scroll-down:hover .semi-circle {
   height: 2.3rem;
@@ -2862,18 +2854,14 @@ header.about-header {
   position: relative;
   background: url('../images/digitaldepot.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-  background-attachment: fixed;
   width: 100%;
   height: 595px;
-  z-index: -100;
 }
 header.about-header .about-header-bg {
   background: rgba(0, 0, 0, 0.4);
-  width: 100vw;
-  height: 595px;
+  width: 100%;
+  height: 100%;
 }
 .about-header-text {
   width: 100%;
@@ -3357,18 +3345,14 @@ header.showcase-header {
   position: relative;
   background: url('../images/pencils.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-  background-attachment: fixed;
   width: 100%;
   height: 595px;
-  z-index: -100;
 }
 header.showcase-header .showcase-header-bg {
   background: rgba(0, 0, 0, 0.4);
-  width: 100vw;
-  height: 595px;
+  width: 100%;
+  height: 100%;
 }
 .showcase-header-text {
   width: 100%;
@@ -4614,18 +4598,14 @@ header.services-header {
   position: relative;
   background: url('../images/meter.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-  background-attachment: fixed;
   width: 100%;
   height: 595px;
-  z-index: -100;
 }
 header.services-header .services-header-bg {
   background: rgba(0, 0, 0, 0.4);
-  width: 100vw;
-  height: 595px;
+  width: 100%;
+  height: 100%;
 }
 .services-header-text {
   width: 100%;
@@ -4824,18 +4804,14 @@ header.connect-header {
   position: relative;
   background: url('../images/multimeter.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-  background-attachment: fixed;
   width: 100%;
   height: 595px;
-  z-index: -100;
 }
 header.connect-header .connect-header-bg {
   background: rgba(0, 0, 0, 0.4);
-  width: 100vw;
-  height: 595px;
+  width: 100%;
+  height: 100%;
 }
 .connect-header-text {
   width: 100%;
